# Standards

./: README.md  general.md  javascript.md  python.md  repositories.md
examples/javascript/: .prettierignore  .prettierrc
examples/python/: pyproject.toml
general/: contributing.md  repositories.md
languages/: all-languages.md  javascript.md  python.md
