[build-system]
requires = ["setuptools>=74.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-name"
version = "1.0.0"
authors = [{ name = "Author 1", email = "internetID@d.umn.edu" }]
description = "A description of the project"
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/Bulldog-Rocketry/project-name"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
